sahara (1:4.0.0~b3-1) experimental; urgency=medium

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).

  [ Thomas Goirand ]
  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Tue, 08 Mar 2016 14:06:54 +0100

sahara (1:4.0.0~b2-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Removed the use of "dpkg-parsechangelog -S" which doesn't work on Trusty.
  * Fixed debian/copyright ordering.

 -- Thomas Goirand <zigo@debian.org>  Thu, 10 Dec 2015 14:42:25 +0100

sahara (1:3.0.0-5) unstable; urgency=medium

  [ Mikhail Ivanov ]
  * d/rules: fix typo in rules with wrong package naming (ie: it was
    sahara-commom instead of common (see the m at the end instead of n)).

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 11:58:35 +0000

sahara (1:3.0.0-4) unstable; urgency=medium

  * Added q-text-as-data in depends of sahara-api.

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 11:58:35 +0000

sahara (1:3.0.0-3) unstable; urgency=medium

  * Rebuilt with openstack-pkg-tools 37 to use Keystone API v3.

 -- Thomas Goirand <zigo@debian.org>  Tue, 03 Nov 2015 09:14:17 +0000

sahara (1:3.0.0-2) unstable; urgency=medium

  * Uploading to unstable.

 -- Thomas Goirand <zigo@debian.org>  Fri, 16 Oct 2015 20:05:35 +0000

sahara (1:3.0.0-1) experimental; urgency=medium

  * New upstream release.

 -- Thomas Goirand <zigo@debian.org>  Thu, 15 Oct 2015 17:05:17 +0200

sahara (1:3.0.0~rc1-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.
  * Added nl.po.
  * Now sahara-api depends on python-openstackclient.

 -- Thomas Goirand <zigo@debian.org>  Sat, 26 Sep 2015 20:02:03 +0000

sahara (1:3.0.0~b3-1) experimental; urgency=medium

  * New upstream release.
  * Fixed (build-)depends for this release.

 -- Thomas Goirand <zigo@debian.org>  Wed, 09 Sep 2015 10:50:55 +0200
